# Light-In-The-Dark-Game-Engine

./: .gitattributes  .gitignore  CLAUDE.md  README.md  api-manifest.json  audit-report.json  audit-report.md  go.mod  go.sum  renderevidence
.claude/: statusline.mjs
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug.yml  task.yml
.github/workflows/: ci.yml  determinism.yml  jassgen-audit.yml  world-archive.yml
.github/workflows-disabled/: ci.yml
Calyx/crates/calyx-web-api/: Cargo.toml
Calyx/crates/calyx-web-api/src/: lib.rs  main.rs
Calyx/crates/calyx-web-api/tests/: api.rs
Calyx/scripts/: tmp_scratch_guard.sh
assets/: CENSUS.md  CREDITS.md  MANIFEST  census.tsv
benchmarks/: budgets.toml
cmd/animtest/: main.go
cmd/desyncfsv/: main.go  main_test.go
cmd/firstlight/: main.go
cmd/game/: console.go  console_test.go  main.go  main_test.go  units.go  units_test.go
cmd/headless/: main.go  main_test.go
cmd/litd/: ability_ref_test.go  firstflame_slice_test.go  main.go  main_test.go  spell_firebolt_test.go  world_saveload_test.go
cmd/litd-editor/: main.go
cmd/litd-hub/: main.go
cmd/mapshot/: main.go  main_test.go
cmd/portraitdemo/: main.go
data/locale/: en.toml  (+1 more)
docs/: PRD.md  lua-patch-log.md  theclicli-transcripts.md
light-in-the-dark-game-engine/: .gitignore  audit-report.md
prompts/: compression.md  create-github-issues.md  fsv.md  github-goals.md  update-file-truth.md
scripts/: census.sh  license-scan.sh  manifest-add.sh  pack-world.sh  preflight.sh  release-build.sh
tmp/: SITREP_2026-06-26_113948.md  SITREP_2026-06-26_155810.md
(+1774 files in other folders)
