[package]
name = "calyx-web-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "calyx_web_api"
path = "src/lib.rs"

[[bin]]
name = "calyx-web-api"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["catch-panic"] }
calyx-core = { path = "../calyx-core" }
calyx-aster = { path = "../calyx-aster" }
calyx-registry = { path = "../calyx-registry" }
serde = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
